# nordigen-python

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
example/: .env.template  .gitignore  README.md  app.py  requirements.txt
example/templates/: index.html
nordigen/: __init__.py  nordigen.py
nordigen/api/: __init__.py  accounts.py  agreements.py  institutions.py  requisitions.py
nordigen/types/: __init__.py  http_enums.py  types.py
nordigen/utils/: filter.py
tests/: conftest.py  mocks.py  test_accounts.py  test_agreement.py  test_client.py  test_institutions.py  test_premium_accounts.py  test_requisition.py
